few more changes

--- a/index.html
+++ b/index.html
@@ -87,14 +87,19 @@
     <div class="container">
         <div class="row ">
             <div class="col-md-6 col-sm-6 col-xs-6">
+            <div class="container">
                     <a href="furniture.html">  
                     <img src="https://www.royaloakindia.com/thumbimages/Lifestyle533X3687.jpg" class="rounded-circle img-fluid" style="margin:50px" alt="Furniture" title="Furniture">
                     </a>
             </div>
-           <div class="col-md-6 col-sm-6 col-xs-6">
+            </div>
+            
+            <div class="col-md-6 col-sm-6 col-xs-6">
+            <div class="container">
                     <a href="elec.html">
                     <img src="https://lowkhethai.github.io/html%20image/home-appliances.jpg" class="rounded-circle img-fluid" style="margin:50px" alt="Electrical Appliances" title="Electrical Appliances">
                     </a>
+            </div>
             </div>
         </div>
     </div>
