--- a/about.html
+++ b/about.html
@@ -37,9 +37,13 @@
           </ul>
         </div>
     </nav>
-    <div class="container">
-      <img src="t1.png">
-
+    <div class="card" style="width: 18rem;">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="furniture.html" class="btn btn-primary">Go somewhere</a>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
