--- a/kit.html
+++ b/kit.html
@@ -36,9 +36,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-4">
-                <div class="container">
-                   <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU">
-                </div>
+              <div class="card" style="width: 18rem;">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="furniture.html" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
             </div>
             
             <div class="col-md-4 col-sm-4 col-xs-4">
