--- a/about.html
+++ b/about.html
@@ -37,12 +37,36 @@
           </ul>
         </div>
     </nav>
-    <div class="card" style="width: 18rem;">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class="card-img-top" alt="...">
+    <br>
+    <br>
+    <div class="container">
+    <div class="card text-white bg-danger mb-3">
+      <div class="card-header" style="font-size:2rem;">About Us</div>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="furniture.html" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text" style="font-size:1.5rem;">We provide ONE STOP shop for all home furniture and home appliances.
+          Home furniture are handcrafted by combining well selected raw material with unique design.
+          Our products provide you with modern style while maintaining exceptional level of craftmanship conceived through years of experience.
+          Our range of home appliances are easy to use and come in various sizes to match your kitchen units.
+          These appliances cater to both low end and high end customers.
+          You can choose the best from our range of products.<br>
+          </p>
+      </div>
+    </div>
+      <br>
+    <div class="container">
+      <div class="card text-white bg-success mb-3">
+        <div class="card-header" style="font-size:2rem;">Our philosophy</div>
+        <div class="card-body">
+        <p class="card-text" style="font-size:1.5rem;">Our furniture design is based on the flow of nature and sustainability. We collaborate the idea of ‘upcycling’ into our designs to reduce waste and to create sustainability lifestyle.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card text-white bg-warning mb-3">
+        <div class="card-header" style="font-size:2rem;">Our motto</div>
+        <div class="card-body">
+          <p class="card-text" style="font-size:1.5rem;">You Deserve Only the Best!!</p>
+        </div>
       </div>
     </div>
 
