--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </ul>
         </div>
     </nav>
-    <h1 class="display-1">Happy Homes!</h1>
+    <h1 class="display-1" style="text-align:center;">Happy Homes!</h1>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
