--- a/about.html
+++ b/about.html
@@ -38,9 +38,13 @@
         </div>
     </nav>
     <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
+    <br>
     <br>
    <div class="container">
-    <div class="card text-white bg-danger mb-3">
+    <div class="card text-white bg-success mb-3">
       <div class="card-header" style="font-size:2rem;">About Us</div>
       <div class="card-body">
         <p class="card-text" style="font-size:1.5rem;">We provide ONE STOP shop for all home furniture and home appliances.
@@ -54,7 +58,7 @@
     </div>
       <br>
     <div class="container">
-      <div class="card text-white bg-success mb-3">
+      <div class="card text-white mb-3" style="background-color: blueviolet;">
         <div class="card-header" style="font-size:2rem;">Our philosophy</div>
         <div class="card-body">
         <p class="card-text" style="font-size:1.5rem;">Our furniture design is based on the flow of nature and sustainability. We collaborate the idea of ‘upcycling’ into our designs to reduce waste and to create sustainability lifestyle.</p>
@@ -63,7 +67,7 @@
     </div>
     <br>
     <div class="container">
-      <div class="card text-white bg-warning mb-3">
+      <div class="card text-white bg-dark mb-3">
         <div class="card-header" style="font-size:2rem;">Our motto</div>
         <div class="card-body">
           <p class="card-text" style="font-size:1.5rem;">You Deserve Only the Best!!</p>
