--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
           </ul>
         </div>
     </nav>
-    <h1 class="display-1" style="text-align:center;">Happy Homes!</h1>
-
+    <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -79,10 +81,14 @@
         </a>
     </div>
     <br>
-    <br>
-    <br>
-    <h1 class="display-4">What are you waiting for?<br>Choose your option.........</h1>
-    <h1 class="display-4">Go on!! Choose the image</h1>
+    
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="h2">What are you waiting for?</h1>
+        <p class="h4">Choose your option.........Go on!!</p>
+      </div>
+    </div>
+    
     <br>
     <div class="container">
         <div class="row ">
