--- a/bed.html
+++ b/bed.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,15 @@
               <a class="nav-link" href="bed.html">Bedroom</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="kit.html">Kitchen</a>
+              <a class="nav-link" href="kit.html">Dining Room</a>
             </li>
            </ul>
         </div>
     </nav>
+    <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
     <br>
     <br>
     <br>
@@ -50,7 +54,7 @@
             </div>
             <div class="col-md-4 col-sm-4 col-xs-4">
               <div class="card">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class="card-img-top" alt="...">
+              <img src="" class="card-img-top" alt="...">
               <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -60,7 +64,7 @@
             </div>
             <div class="col-md-4 col-sm-4 col-xs-4">
               <div class="card">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class="card-img-top" alt="...">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQhdtPdVAlYYv37kL_09XJ3Ajj6_K-hFqgwXw&usqp=CAU" class=" rounded-circle card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +84,7 @@
               <div class="card-body">
                 <h5 class="card-title">Jumbo Bed</h5>
                 <p class="card-text">very comfortable.</p>
-                <a href="furniture.html" class="btn btn-primary">Buy Now</a>
+                <a href="buy.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
             </div>
@@ -100,7 +104,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="furniture.html" class="btn btn-primary">Go somewhere</a>
+                <a href="buy.html" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
             </div>
