--- a/elec.html
+++ b/elec.html
@@ -11,9 +11,12 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
     <br>
+    
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-4">
