--- a/kit.html
+++ b/kit.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,15 @@
               <a class="nav-link" href="bed.html">Bedroom</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="kit.html">Kitchen</a>
+              <a class="nav-link" href="kit.html">Dining Room</a>
             </li>
            </ul>
         </div>
     </nav>
+    <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
     <br>
     <br>
     <div class="container">
