--- a/team.html
+++ b/team.html
@@ -38,6 +38,10 @@
           </ul>
         </div>
       </nav>
+      <br>
+     <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
 
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
