--- a/buyb.html
+++ b/buyb.html
@@ -52,12 +52,11 @@
           <p>
               <ul>
                   <li>100% finish</li>
-                  <li>4-seater, 6-seater, 8-seater Available!</li>
+                  <li>Walnut finish, Valigny oak finish, Sonoma oak finish, Cinnamon finish</li>
                   <li>Made using Best Wood such as melamine, mahogany, rubber wood, sheesham</li>
-                  <li>Multi-purpose dining chairs</li>
-                  <li>Pleasing shades such as walnut, mocha brown, black, chrome, chocolate </li>
-                  <li>Tempered glass</li>
-                  <li>Ceramic coated glass top</li>
+                  <li>Beds with storage space available</li>
+                  <li>Pull out storage, Hydraulic storage, Box storage</li>
+                  <li>Pleasing colours such as light brown, cloa rain, black, maple, linewood</li>
                   <li>1 year warranty</li>
               </ul>
 
