--- a/buys.html
+++ b/buys.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <br>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
+    <br>
     <script>
       function validateForm() 
         {
