--- a/kit.html
+++ b/kit.html
@@ -39,7 +39,7 @@
     <p class="h6 lead" style="text-align: center;">The elegance of your Dining Room</p><br>
     <p class="h5" style="text-align: center;">We allow you to customise your search by showing you all the available option for all the types of rooms.</p>
     
-    <p class="h5" style="text-align: center;">We provide you broad types of dining table designs which lend elegance and homliness to the dining room decor. </p>
+    <p class="h5" style="text-align: center;">We provide you broad types of dining table designs which lend elegance and homeliness to the dining room decor. </p>
     <br>
     <div class="container">
       <div class="row">
