few minor changes

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     </div>
       <br>
     <div class="container">
-      <div class="card text-white mb-3" style="background-color: blueviolet;">
+      <div class="card text-white mb-3" style="background-color: darksalmon;">
         <div class="card-header" style="font-size:2rem;">Our philosophy</div>
         <div class="card-body">
         <p class="card-text" style="font-size:1.5rem;">Our furniture design is based on the flow of nature and sustainability. We collaborate the idea of ‘upcycling’ into our designs to reduce waste and to create sustainability lifestyle.</p>
