--- a/bed.html
+++ b/bed.html
@@ -35,7 +35,7 @@
     <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
-    <p class="display-4" style="text-align: center;">Bedroom</p>
+    <p class="display-4" style="text-align: center;">Beds</p>
     <p class="h6 lead" style="text-align: center;">The lazy vibe of your bedroom</p><br>
     <p class="h5" style="text-align: center;">We allow you to customise your search by showing you all the available option for all the types of rooms.</p>
     
