--- a/team.html
+++ b/team.html
@@ -42,7 +42,8 @@
      <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
      <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
-
+    <p>The Happy Homes' team is a dedicated 10 member team of multi-disciplinary experts in the field of industrial, engineering, electronics and space design working together to create appealing and ergonomically sound products.</p>
+    <p>We have over 20 stores across 10 cities. Drop in experience our products first hand or interact with our team.</p>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
