--- a/about.html
+++ b/about.html
@@ -23,6 +23,9 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="product.html">Our Products</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="services.html">Our Services</a>
             </li>
             <li class="nav-item">
@@ -41,6 +44,11 @@
     <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;color:black;">To view our whole range of products visit <a href="product.html">Our Products</a> page.<br> To connect with us visit our <a href="contact.html">Contact Us</a> page.<br> We also provide repair and time to time checks. For that visit our <a href="services.html">Services</a> page.<br>To learn more about our team visit <a href="team.html">Our Team</a> page.</p>
+      </div>
+    </div>
     <br>
     <br>
    <div class="container">
