--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -24,6 +24,9 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="product.html">Our Products</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="services.html">Our Services</a>
             </li>
             <li class="nav-item">
@@ -40,7 +43,7 @@
     </nav>
     <br>
     <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
-    <p class="lead" style="text-align:center; color: darkorchid;"><b>You Deserve Only the Best......</b></p>
+    <p class="lead" style="text-align:center; font-family: cursive; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -128,13 +131,13 @@
     </div>
     <div class="jumbotron jumbotron-fluid" style="background-color:plum;">
       <div class="container">
-        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;color:black;">To know more about us visit our <a href="about.html">About Us</a> page.<br> To connect with us visit our <a href="contact.html">Contact Us</a> page.<br> We also provide repair and time to time checks. For that visit our <a href="services.html">Services</a> page.</p>
+        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;color:black;">To know more about us visit our <a href="about.html">About Us</a> page.<br> To connect with us visit our <a href="contact.html">Contact Us</a> page.<br> We also provide repair and time to time checks. For that visit our <a href="services.html">Services</a> page.<br>To learn more about our team visit <a href="team.html">Our Team</a> page.</p>
       </div>
     </div>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="h2" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Let's begin</h1>
-        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">To view all our products click on the buttons below.</p>
+        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">To view all our products click on the View More button below.</p>
       </div>
     </div>
     <div class="container">
