--- a/services.html
+++ b/services.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link " href="product.html">Our Products</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="services.html">Our Services<span class="sr-only">(current)</span></a>
             </li>
@@ -42,7 +45,11 @@
     <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
-
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;color:black;">To view our whole range of products visit <a href="product.html">Our Products</a> page.<br>To know more about us visit our <a href="about.html">About Us</a> page.<br> To connect with us visit our <a href="contact.html">Contact Us</a> page.<br>To learn more about our team visit <a href="team.html">Our Team</a> page.</p>
+      </div>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -53,5 +60,3 @@
 
 
 
-https://lowkhethai.github.io/html%20image/home-appliances.jpg
-https://www.pngkey.com/png/detail/182-1826866_home-and-kitchen-appliances-png-kitchen-electrical-appliances.png
