--- a/team.html
+++ b/team.html
@@ -24,6 +24,9 @@
               <a class="nav-link" href="index.html">Home </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="product.html">Our Products</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="services.html">Our Services</a>
             </li>
             <li class="nav-item active">
