--- a/services.html
+++ b/services.html
@@ -70,7 +70,10 @@
         </div>
       </nav>
       <br>
-    <h1 class="display-1" style="text-align:center; color: darkorchid;">Happy Homes!</h1>
+    <h1 class="display-1" style="text-align:center; color: darkorchid;"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+      <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+    </svg>Happy Homes!</h1>
     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
     <div class="jumbotron jumbotron-fluid">
@@ -81,9 +84,9 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <p class="h5" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Worried about the performance of your appliance. Don't worry we have got you. Fill the form below to avail our time to time check up services. <br>Brought your furniture or appliance from elsewhere and doubtful about its installation. We will set it up. Fill the form to avail the service.<br>Your appliance is not working properly? Fill the form. Our clients will get your appliance working.</p>
-        
-        <h1 class="h1">Form</h1>
         <br>
+        <h1 class="h1">Form</h1>
+        
         <p class="h5">The Form will validate your inputs. Be sure while filling it.</p>
         <p>
           <form name="myForm">
