--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     <br>
     <br>
    <div class="container">
-    <div class="card text-white bg-success mb-3">
+    <div class="card text-white mb-3" style="background-color:lawngreen;">
       <div class="card-header" style="font-size:2rem;">About Us</div>
       <div class="card-body">
         <p class="card-text" style="font-size:1.5rem;">We provide ONE STOP shop for all home furniture and home appliances.
