--- a/bed.html
+++ b/bed.html
@@ -42,7 +42,7 @@
     <p class="h6 lead" style="text-align: center;">The lazy vibe of your bedroom</p><br>
     <p class="h5" style="text-align: center;">We allow you to customise your search by showing you all the available option for all the types of rooms.</p>
     
-    <p class="h5" style="text-align: center;">Whether its a rainy morninig or a winter night, our beds are our beds companions with a warm blanket and a soft pillow a cosy bed is all you need. </p>
+    <p class="h5" style="text-align: center;">Whether its a rainy morninig or a winter night, our beds are our beds companions with a warm blanket and a soft pillow a cosy bed is all you need.<br>Liked a product. Why wait? Go grab it. <b><b style="color: red;">Click on Buy Now</b></b> </p>
     <br>
     
     <div class="container">
