--- a/elec.html
+++ b/elec.html
@@ -19,7 +19,8 @@
     <p class="lead" style="text-align:center; color: darkorchid;">You Deserve Only the Best......</p>
     <br>
     <br>
-    
+    <p class="h5" style="text-align: center;">Liked a product. Why wait? Go grab it. <b><b style="color: red;">Click on Buy Now</b></b></p>
+    <br>
     <div class="container">
         <div class="row">
           
