--- a/furniture.html
+++ b/furniture.html
@@ -43,7 +43,7 @@
     <p class="h6 lead" style="text-align: center;">The asthetics of your Living Room</p><br>
     <p class="h5" style="text-align: center;">We allow you to customise your search by showing you all the available option for all the types of rooms.</p>
     
-    <p class="h5" style="text-align: center;">You will find the perfect and comfortable sofas for your needs which is made up of a different frame, type of upholstery, foam, fabric. Do select the one that accentuates your decor, mathces your sensibilities and fulfills its purpose.</p>
+    <p class="h5" style="text-align: center;">You will find the perfect and comfortable sofas for your needs which is made up of a different frame, type of upholstery, foam, fabric. Do select the one that accentuates your decor, mathces your sensibilities and fulfills its purpose.<br>Liked a product. Why wait? Go grab it. <b><b style="color: red;">Click on Buy Now</b></b></p>
     <br>
     <div class="container">
       <div class="row">
