--- a/buye.html
+++ b/buye.html
@@ -52,12 +52,9 @@
           <p>
               <ul>
                   <li>100% finish</li>
-                  <li>4-seater, 6-seater, 8-seater Available!</li>
-                  <li>Made using Best Wood such as melamine, mahogany, rubber wood, sheesham</li>
-                  <li>Multi-purpose dining chairs</li>
-                  <li>Pleasing shades such as walnut, mocha brown, black, chrome, chocolate </li>
-                  <li>Tempered glass</li>
-                  <li>Ceramic coated glass top</li>
+                  <li>Complete installation</li>
+                  <li>Free repairs</li>
+                  <li>Blends with your lifestyle</li>
                   <li>1 year warranty</li>
               </ul>
 
