--- a/bed.html
+++ b/bed.html
@@ -58,7 +58,7 @@
               <div class="card-body">
                 <h5 class="card-title">Morf N'chant</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 38,940 </p>
-                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -68,7 +68,7 @@
               <div class="card-body">
               <h5 class="card-title">Adriana</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 49,548</p>
-              <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -78,7 +78,7 @@
               <div class="card-body">
                 <h5 class="card-title">Centaurus</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 68,471</p>
-                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="card-body">
                 <h5 class="card-title">Maze</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 56,993 </p>
-                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -104,7 +104,7 @@
               <div class="card-body">
               <h5 class="card-title">Pearl</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 49,712</p>
-              <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <h5 class="card-title">Contrast</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 44,945</p>
-                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
