--- a/elec.html
+++ b/elec.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Sony</h5>
                   <p class="card-text">MRP (Inclusive of all taxes) : 38,940 </p>
-                  <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                  <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
                 </div>
               </div>
               </div>
@@ -44,7 +44,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Honor TV Huawei</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 49,548</p>
-                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
               </div>
               </div>
@@ -54,7 +54,7 @@
                 <div class="card-body">
                   <h5 class="card-title">LG</h5>
                   <p class="card-text">MRP (Inclusive of all taxes) : 68,471</p>
-                  <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                  <a href="buyb.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
                 </div>
               </div>
               </div>
@@ -70,7 +70,7 @@
               <div class="card-body">
                 <h5 class="card-title">Jule pro</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 21,900 </p>
-                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -80,7 +80,7 @@
               <div class="card-body">
               <h5 class="card-title">Whirlpool</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 23,601</p>
-              <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -90,7 +90,7 @@
               <div class="card-body">
                 <h5 class="card-title">Forbes</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 44,945</p>
-                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
