--- a/furniture.html
+++ b/furniture.html
@@ -58,7 +58,7 @@
               <div class="card-body">
                 <h5 class="card-title">Sweden Sectional Sofa</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 33,900 </p>
-                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -68,7 +68,7 @@
               <div class="card-body">
               <h5 class="card-title">Timber land Sofa</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 40,601</p>
-              <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -78,7 +78,7 @@
               <div class="card-body">
                 <h5 class="card-title">Luxury Sofa Set</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 62,569</p>
-                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="card-body">
                 <h5 class="card-title">Facet</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 44,594</p>
-                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -104,7 +104,7 @@
               <div class="card-body">
               <h5 class="card-title">Europe pro</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 29,568</p>
-              <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <h5 class="card-title">Brussels</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 70,102</p>
-                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buys.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
