--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="h2" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Let's begin</h1>
-        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">To view all our products click on the View More button below.</p>
+        <p class="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">To view all our products <b><b style="color: red;">Click on the View More button below.</b></b></p>
       </div>
     </div>
     <div class="container">
@@ -171,7 +171,7 @@
               <img src="https://www.royaloakindia.com/thumbimages/Lifestyle533X3687.jpg" class="card-img-top" alt="furniture">
               <div class="card-body">
                 <h5 class="card-title">Furniture</h5>
-                <a href="furniture.html" class="btn" style="background-color: darkorchid; color: white;">View More</a>
+                <a href="furniture.html" class="btn" style="background-color: darkorchid; color: white;">View More</a> (Click on the button)
               </div>
             </div>
             </div>
@@ -180,7 +180,7 @@
               <img src="https://akm-img-a-in.tosshub.com/sites/btmt/images/stories/white-goods_660_112017010614.jpg" class="card-img-top" alt="electrical appliances">
               <div class="card-body">
               <h5 class="card-title">Electrical Appliances</h5>
-              <a href="elec.html" class="btn" style="background-color: darkorchid; color: white;">View More</a>
+              <a href="elec.html" class="btn" style="background-color: darkorchid; color: white;">View More</a> (Click on the button)
             </div>
             </div>
             </div>
