--- a/kit.html
+++ b/kit.html
@@ -57,7 +57,7 @@
               <div class="card-body">
                 <h5 class="card-title">Jule pro</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 21,900 </p>
-                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
@@ -67,7 +67,7 @@
               <div class="card-body">
               <h5 class="card-title">Gloria</h5>
               <p class="card-text">MRP (Inclusive of all taxes) : 23,601</p>
-              <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+              <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
             </div>
             </div>
             </div>
@@ -77,7 +77,7 @@
               <div class="card-body">
                 <h5 class="card-title">Glitz</h5>
                 <p class="card-text">MRP (Inclusive of all taxes) : 44,945</p>
-                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a>
+                <a href="buy.html" class="btn" style="background-color: darkorchid; color: white;">Buy Now</a> (Click on the Button)
               </div>
             </div>
             </div>
