--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             We provide ONE STOP shop for all home furniture and home appliances.
           Home furniture are handcrafted by combining well selected raw material with unique design.
           Our products provide you with modern style while maintaining exceptional level of craftmanship conceived through years of experience.
-          Our range of home appliances are easy to use and come in various sizes to match your kitchen units.
+          Our range of home appliances are easy to use and come in various sizes to match all your needs.
           These appliances cater to both low end and high end customers.
           You can choose the best from our range of products.<br>
           </div>
